--- a/.dotrc.yml
+++ b/.dotrc.yml
@@ -2,4 +2,4 @@ dir: ".vim"
 link: "*:.vim"
 line:
   path: ".vim/vimrc"
-  line: "if filereadable(expand('init.vim')) | source init.vim | endif"
+  line: "if filereadable(expand('~/.vim/init.vim')) | source ~/.vim/init.vim | endif"
