--- a/.dot.yml
+++ b/.dot.yml
@@ -7,9 +7,9 @@ link:
   - "ftplugin:.vim"
   - "plugin:.vim"
 exec: |
-  if ! test -f "$HOME/.vimrc" || ! grep -Fxq 'source $HOME/.vim/init.vim' "$HOME/.vimrc"; then¬
-    echo 'source $HOME/.vim/init.vim' >> "$HOME/.vimrc"¬
-  fi¬
-  if ! test -f "$HOME/.gvimrc" || ! grep -Fxq 'source $HOME/.vim/ginit.vim' "$HOME/.gvimrc"; then¬
-    echo 'source $HOME/.vim/ginit.vim' >> "$HOME/.gvimrc"¬
-  fi¬
+  if ! test -f "$HOME/.vimrc" || ! grep -Fxq 'source $HOME/.vim/init.vim' "$HOME/.vimrc"; then
+    echo 'source $HOME/.vim/init.vim' >> "$HOME/.vimrc";
+  fi
+  if ! test -f "$HOME/.gvimrc" || ! grep -Fxq 'source $HOME/.vim/ginit.vim' "$HOME/.gvimrc"; then
+    echo 'source $HOME/.vim/ginit.vim' >> "$HOME/.gvimrc";
+  fi
