--- a/.dot.yml
+++ b/.dot.yml
@@ -6,11 +6,11 @@ link:
   - "ftdetect:.vim"
   - "ftplugin:.vim"
   - "plugin:.vim"
-exec: |
-  #!/bin/bash
-  if ! test -f "$HOME/.vimrc" || ! grep -Fxq 'source $HOME/.vim/init.vim' "$HOME/.vimrc"; then
-    echo 'source $HOME/.vim/init.vim' >> "$HOME/.vimrc";
-  fi
-  if ! test -f "$HOME/.gvimrc" || ! grep -Fxq 'source $HOME/.vim/ginit.vim' "$HOME/.gvimrc"; then
-    echo 'source $HOME/.vim/ginit.vim' >> "$HOME/.gvimrc";
-  fi
+exec:
+  - |
+    if ! test -f "$HOME/.vimrc" || ! grep -Fxq 'source $HOME/.vim/init.vim' "$HOME/.vimrc"; then
+      echo 'source $HOME/.vim/init.vim' >> "$HOME/.vimrc";
+    fi;
+    if ! test -f "$HOME/.gvimrc" || ! grep -Fxq 'source $HOME/.vim/ginit.vim' "$HOME/.gvimrc"; then
+      echo 'source $HOME/.vim/ginit.vim' >> "$HOME/.gvimrc";
+    fi;
