--- a/.dot.yml
+++ b/.dot.yml
@@ -1,7 +1,8 @@
 link:
   # - "[^.]*:.vim"
-  - "autoload/*:.vim/autoload"
+  # - "autoload/*:.vim/autoload"
   - "*.vim:.vim"
+  - "autoload:.vim"
   - "config:.vim"
   - "ftdetect:.vim"
   - "ftplugin:.vim"
@@ -11,6 +12,7 @@ exec:
     if ! test -f "$HOME/.vimrc" || ! grep -Fxq 'source $HOME/.vim/init.vim' "$HOME/.vimrc"; then
       echo 'source $HOME/.vim/init.vim' >> "$HOME/.vimrc";
     fi;
+  - |
     if ! test -f "$HOME/.gvimrc" || ! grep -Fxq 'source $HOME/.vim/ginit.vim' "$HOME/.gvimrc"; then
       echo 'source $HOME/.vim/ginit.vim' >> "$HOME/.gvimrc";
     fi;
