--- a/.dot.yml
+++ b/.dot.yml
@@ -14,6 +14,7 @@ role:
     - "ftdetect:.vim"
     - "ftplugin:.vim"
     - "plugin:.vim"
+    - "syntax:.vim"
   line:
     ".vimrc": "source $HOME/.vim/init.vim"
     ".gvimrc": "source $HOME/.vim/ginit.vim"
