--- a/.dot.yml
+++ b/.dot.yml
@@ -18,11 +18,20 @@ role:
         # - --with-pyhton3
         # - --with-custom-python
         # - --with-custom-ruby
+
     -  neovim
-    # pip install neovim
-    # pip3 install neovim
-    # gem install neovim
-    # npm install -g neovim
+    # https://github.com/alexgenco/neovim-ruby
+    - name: neovim
+      type: gem
+    # https://github.com/neovim/node-client
+    - name: neovim
+      type: npm
+    # https://github.com/neovim/python-client
+    - name: neovim
+      type: pip2
+      # os: ["!archlinux"]
+    - name: neovim
+      type: pip3
     # - name: python-neovim
     #   os: ["arch", "darwin"]
 
