--- a/.dot.yml
+++ b/.dot.yml
@@ -19,19 +19,24 @@ role:
         # - --with-custom-python
         # - --with-custom-ruby
 
-    -  neovim
+    # https://neovim.io/doc
+    - name: neovim
+      os: ["darwin"]
     # https://github.com/alexgenco/neovim-ruby
     - name: neovim
       type: gem
+      os: ["darwin"]
     # https://github.com/neovim/node-client
     - name: neovim
       type: npm
+      os: ["darwin"]
     # https://github.com/neovim/python-client
     - name: neovim
       type: pip2
-      # os: ["!archlinux"]
+      os: ["darwin"]
     - name: neovim
       type: pip3
+      os: ["darwin"]
     # - name: python-neovim
     #   os: ["arch", "darwin"]
 
@@ -60,6 +65,7 @@ role:
     ".gvimrc": "source $HOME/.vim/ginit.vim"
   post_install:
     - vim --version
-    - nvim --version
+    - command: nvim --version
+      os: ["darwin"]
     - neovim-node-host
     - neovim-ruby-host
