--- a/.dot.yml
+++ b/.dot.yml
@@ -65,7 +65,8 @@ role:
     ".gvimrc": "source $HOME/.vim/ginit.vim"
   post_install:
     - vim --version
-    - command: nvim --version
+    - command:
+        - nvim --version
+        - neovim-node-host
       os: ["darwin"]
-    - neovim-node-host
     - neovim-ruby-host
