--- a/.dot.yml
+++ b/.dot.yml
@@ -66,5 +66,5 @@ role:
       env: PATH="$PATH:$HOME/.node_modules/bin"
     - python2 -c 'import neovim'
     - python3 -c 'import neovim'
-    - command -v neovim-ruby-host
+    - echo $PATH; command -v neovim-ruby-host
     # TODO: non-interactive nvim +checkhealth +qa
