--- a/.dot.yml
+++ b/.dot.yml
@@ -66,5 +66,8 @@ role:
       env: PATH=$PATH:$HOME/.node_modules/bin
     - python2 -c 'import neovim'
     - python3 -c 'import neovim'
-    - command -v neovim-ruby-host
+    - echo $GEM_HOME
+    - echo gem env gemdir
+    - command: command -v neovim-ruby-host
+      env: PATH=$PATH:$GEM_HOME/bin
     # TODO: non-interactive nvim +checkhealth +qa
