--- a/.dot.yml
+++ b/.dot.yml
@@ -66,8 +66,9 @@ role:
       env: PATH=$PATH:$HOME/.node_modules/bin
     - python2 -c 'import neovim'
     - python3 -c 'import neovim'
-    - echo $GEM_HOME
-    - gem env gemdir
+    - command: echo $GEM_HOME
+      env:
+        GEM_HOME: "${GEM_HOME:-$(gem env gemdir)}"
     - command: command -v neovim-ruby-host
-      env: PATH=$PATH:$GEM_HOME/bin
+      env: PATH=$PATH:${GEM_HOME:-$(gem env gemdir)}/bin
     # TODO: non-interactive nvim +checkhealth +qa
