--- a/.dot.yml
+++ b/.dot.yml
@@ -66,11 +66,12 @@ role:
       env: PATH=$PATH:$HOME/.node_modules/bin
     - python2 -c 'import neovim'
     - python3 -c 'import neovim'
+    - gem env dir
+    - ruby -e 'print Gem.user_dir'
+    - echo $GEM_HOME
     - |
         PATH=$PATH:${GEM_HOME:-$(gem env gemdir)}/bin
-        gem env gemdir
         echo $PATH
-        gem env
         ls -la $(gem env gemdir)
         command -v neovim-ruby-host
     # TODO: non-interactive nvim +checkhealth +qa
