--- a/.dot.yml
+++ b/.dot.yml
@@ -66,7 +66,7 @@ role:
       env: PATH=$PATH:$HOME/.node_modules/bin
     - python2 -c 'import neovim'
     - python3 -c 'import neovim'
-    - gem env dir
+    - gem env gemdir
     - ruby -e 'print Gem.user_dir'
     - echo $GEM_HOME
     - |
