--- a/.dot.yml
+++ b/.dot.yml
@@ -68,7 +68,7 @@ role:
     - python3 -c 'import neovim'
     # GEM_HOME="${GEM_HOME:-$(ruby -e 'print Gem.user_dir')}"
     # PATH="$PATH:$GEM_HOME/bin"
-    - command:
+    - command: |
         echo $PATH
         ls -la ${GEM_HOME:-$(ruby -e 'print Gem.user_dir')}
         command -v neovim-ruby-host
