--- a/.dot.yml
+++ b/.dot.yml
@@ -70,7 +70,7 @@ role:
     # PATH="$PATH:$GEM_HOME/bin"
     - command: |
         echo $PATH
-        ls -la ${GEM_HOME:-$(ruby -e 'print Gem.user_dir')}
+        ls -la ${GEM_HOME:-$(ruby -e 'print Gem.user_dir')}/bin
         command -v neovim-ruby-host
       env: PATH="$PATH:${GEM_HOME:-$(ruby -e 'print Gem.user_dir')}/bin"
     # TODO: non-interactive nvim +checkhealth +qa
