--- a/.dot.yml
+++ b/.dot.yml
@@ -69,8 +69,8 @@ role:
     # GEM_HOME="${GEM_HOME:-$(ruby -e 'print Gem.user_dir')}"
     # PATH="$PATH:$GEM_HOME/bin"
     - command: |
-        echo $PATH
+        echo "PATH: '$PATH'"
         command -v neovim-ruby-host
-      env: PATH=${GEM_HOME:-$(ruby -e 'print Gem.user_dir')}/bin
+      env: PATH="$PATH:${GEM_HOME:-$(ruby -e 'print Gem.user_dir')}/bin"
       # env: PATH="$PATH:${GEM_HOME:-$(ruby -e 'print Gem.user_dir')}/bin"
     # TODO: non-interactive nvim +checkhealth +qa
