--- a/.dot.yml
+++ b/.dot.yml
@@ -25,7 +25,9 @@ role:
     - name: neovim
       type: npm
     # https://github.com/neovim/python-client
-    - name: neovim
+    - name:
+        - greenlet
+        - neovim
       type: pip2
     - name: neovim
       type: pip3
