--- a/.dot.yml
+++ b/.dot.yml
@@ -25,12 +25,12 @@ role:
     - name: neovim
       type: npm
     # https://github.com/neovim/python-client
-    - name:
-        - setuptools
-        - wheel
-        - greenlet
-        - neovim
-      type: pip2
+    # - name:
+    #     - setuptools
+    #     - wheel
+    #     - greenlet
+    #     - neovim
+    #   type: pip2
     - name: neovim
       type: pip2
     - name: neovim
