--- a/.dot.yml
+++ b/.dot.yml
@@ -49,8 +49,10 @@ role:
     # Linters (c.f. config/ale.vim)
     - name: vim-vint
       type: pip3
+      os:darwin
     - name: sqlint
       type: gem
+      os:darwin
 
     # Fixers
     - name: shfmt
