--- a/.dot.yml
+++ b/.dot.yml
@@ -80,15 +80,15 @@ role:
     - command: command -v neovim-node-host
       # $(npm prefix --global)/bin
       env: PATH=$PATH:$HOME/.node_modules/bin
-      os: ["!jessie"]
+      os: ["!android", "!jessie"]
     - command: |
         python2 -c 'import neovim'
         python3 -c 'import neovim' || python36 -c 'import neovim'
-      os: ["!jessie"]
+      os: ["!android", "!jessie"]
     # GEM_HOME="${GEM_HOME:-$(ruby -e 'print Gem.user_dir')}"
     # PATH="$PATH:$GEM_HOME/bin"
     - command: command -v neovim-ruby-host
       env: PATH="$PATH:${GEM_HOME:-$(ruby -e 'print Gem.user_dir')}/bin"
-      os: ["!jessie"]
+      os: ["!android", "!jessie"]
       # env: PATH="$PATH:${GEM_HOME:-$(ruby -e 'print Gem.user_dir')}/bin"
     # TODO: non-interactive nvim +checkhealth +qa
