--- a/.dot.yml
+++ b/.dot.yml
@@ -87,6 +87,9 @@ role:
       os: ["!android", "!jessie"]
     # GEM_HOME="${GEM_HOME:-$(ruby -e 'print Gem.user_dir')}"
     # PATH="$PATH:$GEM_HOME/bin"
+    - command: echo $TEST; ls -la $TEST
+      env: TEST="${GEM_HOME:-$(ruby -e 'print Gem.user_dir')}/bin"
+      os: ["!android", "!jessie"]
     - command: command -v neovim-ruby-host
       env: PATH="$PATH:${GEM_HOME:-$(ruby -e 'print Gem.user_dir')}/bin"
       os: ["!android", "!jessie"]
