--- a/.dot.yml
+++ b/.dot.yml
@@ -3,6 +3,8 @@ role:
   pkg:
     - name: curl
       action: install
+    # - name: universal-ctags
+    #   os: ["darwin"]
     # - fzf # $(brew --prefix)/opt/fzf/install
     # - git
     - name: vim
@@ -18,6 +20,8 @@ role:
         # - --with-pyhton3
         # - --with-custom-python
         # - --with-custom-ruby
+    - name: macvim # --with-lua --with-luajit --with-override-system-vim --with-python@2
+      os: ["darwin"]
 
     # https://neovim.io/doc
     - name: neovim
@@ -49,6 +53,8 @@ role:
     # Linters (c.f. config/ale.vim)
     - name: vim-vint
       type: pip3
+      os: darwin
+    - name: flow
       os: darwin
     - name: sqlint
       type: gem
